Implementation/ Demo of: 1. Preview feature - Record type 2. Preview feature - Instance Of Pattern Matching